// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search tests should match snapshot 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  font-size: 0.875rem;
  line-height: 1.4;
  letter-spacing: 0.004em;
  width: 100%;
  height: 2.5rem;
  padding-left: 2rem;
  padding-right: 2.5rem;
  background: transparent;
  border: 1px solid hsla(0, 0%, 73%, 1);
  border-radius: 4px;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  color: #000000;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  padding-top: 0.4375rem;
  padding-bottom: 0.4375rem;
  margin: 0rem;
}

.emotion-1:hover {
  border: 1px solid hsla(0, 0%, 43%, 1);
}

.emotion-1:focus {
  border: 1px solid hsla(0, 0%, 33%, 1);
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(0, 0%, 87%, 1);
}

.emotion-1:disabled {
  background: hsla(0, 0%, 87%, 1);
  color: hsla(0, 0%, 43%, 1);
}

.emotion-2 {
  position: relative;
}

.emotion-2 label {
  left: 44px;
}

.emotion-0 {
  width: 20px;
  height: 20px;
  min-height: 20px;
  min-width: 20px;
  color: #000000;
  top: 0rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
  margin: 0.625rem 0.25rem 0 0.5rem;
}

.emotion-3 {
  position: relative;
  margin-left: 1px;
  margin-right: 1px;
}

<form
    aria-label="Product"
    class="emotion-3"
    role="search"
  >
    <div
      class="emotion-2"
    >
      <svg
        class="emotion-0"
        fill="currentColor"
        height="1.25rem"
        viewBox="0 0 256 256"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="16rem"
          width="16rem"
        />
        <circle
          cx="116"
          cy="116"
          fill="none"
          r="84"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="16"
        />
        <line
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="16"
          x1="175.39356"
          x2="223.99414"
          y1="175.40039"
          y2="224.00098"
        />
      </svg>
      <input
        aria-label="Product"
        class="emotion-1"
        value=""
      />
    </div>
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <button
        tabindex="-1"
        type="submit"
      >
        Search
      </button>
    </span>
  </form>
</DocumentFragment>
`;

exports[`Search tests should match snapshot on loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1,150;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -35;
  }

  100% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -124;
  }
}

.emotion-2 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  font-size: 0.875rem;
  line-height: 1.4;
  letter-spacing: 0.004em;
  width: 100%;
  height: 2.5rem;
  padding-left: 2rem;
  padding-right: 2.5rem;
  background: transparent;
  border: 1px solid hsla(0, 0%, 73%, 1);
  border-radius: 4px;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  color: #000000;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  padding-top: 0.4375rem;
  padding-bottom: 0.4375rem;
  margin: 0rem;
}

.emotion-2:hover {
  border: 1px solid hsla(0, 0%, 43%, 1);
}

.emotion-2:focus {
  border: 1px solid hsla(0, 0%, 33%, 1);
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(0, 0%, 87%, 1);
}

.emotion-2:disabled {
  background: hsla(0, 0%, 87%, 1);
  color: hsla(0, 0%, 43%, 1);
}

.emotion-3 {
  position: relative;
}

.emotion-3 label {
  left: 44px;
}

.emotion-4 {
  position: relative;
  margin-left: 1px;
  margin-right: 1px;
}

.emotion-1 {
  -webkit-animation: animation-0 1.5s linear infinite;
  animation: animation-0 1.5s linear infinite;
  width: 20px;
  height: 20px;
  top: 0rem;
  margin: 0.625rem 0.25rem 0 0.5rem;
  position: absolute;
}

.emotion-0 {
  fill: none;
  stroke: currentColor;
  stroke-width: 5;
  stroke-linecap: round;
  -webkit-animation: animation-1 1s ease-in-out infinite;
  animation: animation-1 1s ease-in-out infinite;
}

<form
    aria-label="Product"
    class="emotion-4"
    role="search"
  >
    <div
      class="emotion-3"
    >
      <svg
        class="emotion-1"
        focusable="false"
        viewBox="0 0 50 50"
      >
        <circle
          class="emotion-0"
          cx="25"
          cy="25"
          r="20"
        />
      </svg>
      <input
        aria-label="Product"
        class="emotion-2"
        value=""
      />
    </div>
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <button
        tabindex="-1"
        type="submit"
      >
        Search
      </button>
    </span>
  </form>
</DocumentFragment>
`;
